BUGFIX : Layout breaking on zoom fixed

--- a/Arsoude-Client/src/app/app.component.css
+++ b/Arsoude-Client/src/app/app.component.css
@@ -2,8 +2,7 @@
   flex-direction: row;
   height: 100%;
   background-color: #02282F;
-  /* position: relative; */
- 
+  
 }
 
 app-nav{
@@ -13,13 +12,4 @@ app-nav{
   right: 0;
   width: 100%;
   z-index: 1000;
-}
-
-@media only screen and (max-width:1500px)  {
-
-.content{
-
-padding-bottom: 100px;
-  height: auto;
-}
 }
