--- a/Arsoude-Client/src/app/nav/nav.component.css
+++ b/Arsoude-Client/src/app/nav/nav.component.css
@@ -18,12 +18,21 @@ ul{
     background-color: white;
     gap: 25px;
     padding-right: 130px;  
+    
 }
 li{
     
     font-size: 1.3rem;
     font-weight: bold;
+text-decoration: none;
+
 }
+
+li a { text-decoration: none; color:#000; }
+li a:visited { text-decoration: none; color:#000; }
+li a:hover { text-decoration: none; color:#000; }
+li a:focus { text-decoration: none; color:#000; }
+li a:hover, .navBtn:active { text-decoration: none; color:#000; }
 
 .logo{
     background-color: #379271;
@@ -35,6 +44,7 @@ li{
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+
 
     p{
         color: white;
